--- a/src/pages/header/index.css
+++ b/src/pages/header/index.css
@@ -5,9 +5,6 @@
   flex-wrap: wrap;
   box-shadow: var(--shadow);
 }
-.page_header a {
-  text-decoration: none;
-}
 .page_header_column {
   box-sizing: border-box;
   display: flex;
